--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="header">
     <h1>Dustin H Meyers</h1>
     <h2>1216 New Jersey Street,</br> Lawrence, KS 66044</br>(913) 375-7915</h2>
-  <img src="https://cdn.shopify.com/s/files/1/0887/4442/files/dusty.jpg?16779063126843181448"/>
+  <img src="https://cdn.shopify.com/s/files/1/0887/4442/files/dusty.jpg?16779063126843181448" align="left"/>
   </div>
   <div class="profile">
     <h2>Profile</h2>
