--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2>Profile</h2>
       <p>A self-motivated, creative and productive problem solver, always looking to optomize proficiency through myself or other team members. Six years of customer service has given me the insite to best provide solutions for clients. Three years in gallery management plus a decade of leadership experience through the Boys Scouts of America has taught me how to focus and organize a team. Rebuilt current employers retail website with no formal training.</p> 
   </div>
-  <div class="content">
+  <div class="edu">
     <h2>Education</h2>
     <h3>College</h3>
     <h4>University of Kansas - <i>B.F.A. in Visual Arts</i> - Lawrence , KS
@@ -43,7 +43,7 @@
             <li>Secondary Diploma from the International Baccalaureate Program</li>
           </ul></h4>
   </div>
-  <div class="content">
+  <div class="exp">
     <h2>Professional Experience</h2>
       <h3>Phoenix Gallery - <i>Assistant Director, Clerk</i></h3>
         <ul>
