--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="style.css" />
+   <link rel="stylesheet" href="style.css" />
   <title>Dustin H Meyers | Resume 2020</title>
 </head>
 <body>
   <div class="header">
-    <h1>Dustin H Meyers</h1>
-    <h2>1216 New Jersey Street,</br> Lawrence, KS 66044</br>(913) 375-7915</h2>
-  <img src="https://cdn.shopify.com/s/files/1/0887/4442/files/dusty.jpg?16779063126843181448" align="left"/>
+    <img src="https://cdn.shopify.com/s/files/1/0887/4442/files/dusty.jpg?16779063126843181448" style="float:left;width:120px;height:120px"/>
+      <h1>Dustin H Meyers</h1>
+        <h2>1216 New Jersey Street,</br> Lawrence, KS 66044</br>(913) 375-7915</h2>
   </div>
   <div class="profile">
     <h2>Profile</h2>
@@ -19,29 +19,29 @@
   <div class="edu">
     <h2>Education</h2>
     <h3>College</h3>
-    <h4>University of Kansas - <i>B.F.A. in Visual Arts</i> - Lawrence , KS
-          <ul>
-            <li>2011 to 2015</li>
-            <li>Graduated with Distinction</li>
-            <li>Minor in Art History</li>
-            <li>3.8 GPA</li>
-          </ul>
-    </h4>
-    <h4>Lahti Univiersity of Applied Sciences - <i>Emphasis on Sculpture Studies</i> - Lahti, Finland
-          <ul>
-            <li>2013 to 2014</li>
-            <li>Study Abroad</li>
-            <li>Passed (Pass/fail)</li>
-          </ul>
-    </h4>
-      <h3>High School</h3>
-        <h4>Shawnee Mission Northwest - Shawnee, KS
-          <ul>
-            <li>2007 to 2011</li>
-            <li>Graduated on the Honor Roll</li>
-            <li>GPA 4.05, Class Rank top 17%</li>
-            <li>Secondary Diploma from the International Baccalaureate Program</li>
-          </ul></h4>
+      <h4>University of Kansas - <i>B.F.A. in Visual Arts</i> - Lawrence , KS
+           <ul>
+             <li>2011 to 2015</li>
+             <li>Graduated with Distinction</li>
+             <li>Minor in Art History</li>
+             <li>3.8 GPA</li>
+           </ul>
+      </h4>
+      <h4>Lahti Univiersity of Applied Sciences - <i>Emphasis on Sculpture Studies</i> - Lahti, Finland
+            <ul>
+              <li>2013 to 2014</li>
+              <li>Study Abroad</li>
+              <li>Passed (Pass/fail)</li>
+            </ul>
+      </h4>
+     <h3>High School</h3>
+       <h4>Shawnee Mission Northwest - Shawnee, KS
+         <ul>
+           <li>2007 to 2011</li>
+           <li>Graduated on the Honor Roll</li>
+           <li>GPA 4.05, Class Rank top 17%</li>
+           <li>Secondary Diploma from the International Baccalaureate Program</li>
+         </ul></h4>
   </div>
   <div class="exp">
     <h2>Professional Experience</h2>
