--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@
                 <!-- Contact Section Form-->
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                      <p class="mb-5" style="text-justify: justify;">Feel free to contact me through the form below or connect with me <a href="https://www.linkedin.com/in/dusty-meyers-929915158">here</a>.</p>
+                      <p class="mb-5 lead" style="text-justify: justify;">Please connect with me on <a href="https://www.linkedin.com/in/dusty-meyers-929915158">LinkedIn</a> or through my <a href="https://www.github.com/dustymeyers">GitHub</a>.</p>
                         <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19.-->
-                        <form id="contactForm" name="sentMessage" novalidate="novalidate">
+                        <!-- <form id="contactForm" name="sentMessage" novalidate="novalidate">
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
                                     <label>Name</label>
-                                    <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name." />
+                                    <input class="form-control" id="name" type="text" name="user_name" placeholder="Name" required="required" data-validation-required-message="Please enter your name." />
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
@@ -208,7 +208,7 @@
                             <br />
                             <div id="success"></div>
                             <div class="form-group"><button class="btn btn-primary btn-xl" id="sendMessageButton" type="submit">Send</button></div>
-                        </form>
+                        </form> -->
                     </div>
                 </div>
             </div>
