added Contrive info

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/circus.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/landingPage.png" alt="Contrive Landing Page" />
                         </div>
                     </div>
                     <!-- Portfolio Item 4-->
@@ -148,7 +148,7 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">When I'm not writing code or coming up with my next work of art, you can find me cooking for my beautiful partner, spending quality time with my cats, or prepping for my next Dungeons and Dragons campaign.</p></div>
+                    <div class="col-lg-4 ml-auto"><p class="lead">When I'm not writing code or working on my next work of art, you can find me cooking for my beautiful partner, spending quality time with my cats, or prepping for my next Dungeons and Dragons campaign.</p></div>
                     <div class="col-lg-4 mr-auto"><p class="lead">If you are looking for an individual who is self-motivated, a great team player with leadership instincts, and passionately driven to learn the correct tool for every job, then look no further.</p></div>
                 </div>
                 <!-- About Section Button-->
@@ -356,7 +356,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">Contrive Client Project</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">Contrive: Event Management Software</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -364,9 +364,20 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/circus.png" alt="" />
+                                    <div> 
+                                      <img style="width: 45%;" class="img-fluid rounded mb-5" src="assets/img/portfolio/messagingConversation.png" alt="" />
+                                      <img style="width: 45%;" class="img-fluid rounded mb-5" src="assets/img/portfolio/networkSearch.gif" alt="" />
+                                    </div>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Future Contrive client project info will go here.</p>
+                                    <p class="mb-5">
+                                      <strong>Contrive</strong>Contrive is an event management software platform that connects Event Planners with their local Vendors. With enhanced search features, Planners can find the types of Vendors they most want to do business with and can easily connect with them utilizing the messaging feature. This is a prototype created for real world clients to show to investors their proof of concept.
+                                      <br />
+                                      <br />
+                                      <strong>Technologies used</strong>: HTML, CSS, Javascript, React-Redux, Node.js, Material-UI, Passport, Socket.io, AWS S3 Buckets, and PostgreSQL.
+                                      <br />
+                                      <br />
+                                      Interested in taking a deeper dive into the code? Checkout the GitHub repository <a href="https://github.com/dustymeyers/Contrive">here</a>.
+                                    </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
