added app of holding deployed link

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                                       <strong>Technologies used</strong>: HTML, CSS, Javascript, React-Redux, Node.js, Material-UI, Passport, PostgreSQL, and a third party API for equipment/spell info from <a href="http://www.dnd5eapi.co/">dnd5eapi</a>.
                                       <br />
                                       <br />
-                                      Interested in taking a deeper dive into the code? Checkout the GitHub repository <a href="https://github.com/dustymeyers/app-of-holding-prime-solo">here</a>.
+                                      Interested in taking a deeper dive into the code? Checkout the GitHub repository <a href="https://github.com/dustymeyers/app-of-holding-prime-solo">here</a>, or check out the deployed app <a href="https://app-of-holding.herokuapp.com/">here</a>.
                                     </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
